package com.algonquin.cst8288.assignment2.constants;

public final class Constants {
	
	public static final double WORKSHOP_DURATION = 1.5;
	public static final double KIDS_STORYTIME_DURATION = 1.0;
	public static final double MOVIE_NIGHT_DURATION = 2.5;
	public static final double BOOK_LAUNCH_DURATION = 2.0;

	
	public static final double WORKSHOP_RATE = 10.0;
	public static final double KIDS_STORYTIME_RATE = 3.0;
	public static final double MOVIE_NIGHT_RATE = 3.0;
        public static final double BOOK_LAUNCH_RATE = 4.0;

	
}
