package com.algonquin.cst8288.assignment2.event;

public enum EventType {
    WORKSHOP,
    BOOK_LAUNCH,
    KIDS_STORY,
    MOVIE_NIGHT
}
